--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="container">
     <h1 id="title">Visualización del Producto Interno Bruto (PIB)</h1>
-    <p id="description">Este proyecto presenta una visualización interactiva del Producto Interno Bruto (PIB) de los Estados Unidos. Los datos utilizados en esta visualización provienen de la Fuente de Datos Económicos de la Reserva Federal (Federal Reserve Economic Data - FRED). El PIB es una medida clave que representa el valor total de todos los bienes y servicios producidos en un país durante un período específico.</p>
+    <p id="description">Este proyecto presenta una visualización interactiva del Producto Interno Bruto (PIB) de los Estados Unidos. Los datos utilizados en esta visualización provienen de la Fuente de Datos Económicos de la Reserva Federal (Federal Reserve Economic Data - FRED).</p>
     <div id="chart"></div>
   </div>
   <script src="main.js"></script>
